--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,9 @@ a {
 .flexRow {
   display: flex;
 }
+.wrap {
+  flex-wrap: wrap;
+}
 .justify-sb {
   justify-content: space-between;
 }
@@ -94,8 +97,18 @@ a {
   text-align: center;
 }
 
+.gridBox {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 10px;
+}
+
 .container {
   width: 900px;
   margin: 0 auto;
   position: relative;
+}
+.progress {
+  height: 80px;
+  width: 80px;
 }
